--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     </nav>
     <header class="bg-primary text-white text-center py-3">
         <h1>Bucks2Bar</h1>
-        <h2>The best platfrom to track your icome and expenses</H2>
+        <h2 style="color: white; font-size: 1.25rem; text-align: center;">The best platfrom to track your icome and expenses</h2>
     </header>
 
     <div class="container mt-3">
@@ -140,8 +140,8 @@
         </div>
     </div>
   
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2023 Bucks2Bar. All rights reserved.</p>
+    <footer class="footer bg-dark text-white text-center py-3 mt-auto">
+        <p class="mb-0">&copy; 2023 Bucks2Bar. All rights reserved.</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
