--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,8 @@
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="income-january-label">Income</span>
                                     <input type="number" class="form-control" id="income-january" placeholder="Income"
-                                        aria-label="Income" aria-describedby="income-january-label" />
+                                        aria-label="Income" aria-describedby="income-january-label"
+                                        min="200" max="1000" value="900" />
                                 </div>
                             </div>
                             <div class="col-6">
@@ -66,7 +67,8 @@
                                     <span class="input-group-text" id="expenses-january-label">Expenses</span>
                                     <input type="number" class="form-control" id="expenses-january"
                                         placeholder="Expenses" aria-label="Expenses"
-                                        aria-describedby="expenses-january-label" />
+                                        aria-describedby="expenses-january-label"
+                                        min="200" max="1000" value="600" />
                                 </div>
                             </div>
                         </div>
@@ -77,14 +79,16 @@
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="income-march-label">Income</span>
                                     <input type="number" class="form-control" id="income-march" placeholder="Income"
-                                        aria-label="Income" aria-describedby="income-march-label" />
+                                        aria-label="Income" aria-describedby="income-march-label"
+                                        min="200" max="1000" value="850" />
                                 </div>
                             </div>
                             <div class="col-6">
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="expenses-march-label">Expenses</span>
                                     <input type="number" class="form-control" id="expenses-march" placeholder="Expenses"
-                                        aria-label="Expenses" aria-describedby="expenses-march-label" />
+                                        aria-label="Expenses" aria-describedby="expenses-march-label"
+                                        min="200" max="1000" value="500" />
                                 </div>
                             </div>
                         </div>
@@ -97,7 +101,8 @@
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="income-february-label">Income</span>
                                     <input type="number" class="form-control" id="income-february" placeholder="Income"
-                                        aria-label="Income" aria-describedby="income-february-label" />
+                                        aria-label="Income" aria-describedby="income-february-label"
+                                        min="200" max="1000" value="950" />
                                 </div>
                             </div>
                             <div class="col-6">
@@ -105,7 +110,8 @@
                                     <span class="input-group-text" id="expenses-february-label">Expenses</span>
                                     <input type="number" class="form-control" id="expenses-february"
                                         placeholder="Expenses" aria-label="Expenses"
-                                        aria-describedby="expenses-february-label" />
+                                        aria-describedby="expenses-february-label"
+                                        min="200" max="1000" value="700" />
                                 </div>
                             </div>
                         </div>
@@ -116,14 +122,16 @@
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="income-april-label">Income</span>
                                     <input type="number" class="form-control" id="income-april" placeholder="Income"
-                                        aria-label="Income" aria-describedby="income-april-label" />
+                                        aria-label="Income" aria-describedby="income-april-label"
+                                        min="200" max="1000" value="800" />
                                 </div>
                             </div>
                             <div class="col-6">
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="expenses-april-label">Expenses</span>
                                     <input type="number" class="form-control" id="expenses-april" placeholder="Expenses"
-                                        aria-label="Expenses" aria-describedby="expenses-april-label" />
+                                        aria-label="Expenses" aria-describedby="expenses-april-label"
+                                        min="200" max="1000" value="400" />
                                 </div>
                             </div>
                         </div>
